opam-version: "2.0"
synopsis: "OCaml syntax dialect which adds JSX syntax expressions"
maintainer: ["Andrey Popp"]
authors: ["Andrey Popp"]
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/ocaml-mlx/mlx"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/ocaml-mlx/mlx/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "ppxlib"
  "dune" {>= "3.15"}
  "menhir" {= "20210419" & with-dev-setup}
  "ocamlformat" {with-dev-setup}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/ocaml-mlx/mlx.git"
