opam-version: "2.0"
synopsis: "OCaml syntax dialect which adds JSX syntax expressions"
maintainer: ["Andrey Popp"]
authors: ["Andrey Popp"]
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/ocaml-mlx/mlx"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/ocaml-mlx/mlx/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "ppxlib" {>= "0.34.0"}
  "dune" {>= "3.16"}
  "menhir" {= "20201216" & with-dev-setup}
  "ocamlformat" {with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
dev-repo: "git+https://github.com/ocaml-mlx/mlx.git"
