opam-version: "2.0"
synopsis: "Merlin support for MLX OCaml dialect"
maintainer: ["Andrey Popp"]
authors: ["Andrey Popp"]
license: "MIT"
homepage: "https://github.com/ocaml-mlx/mlx"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/ocaml-mlx/mlx/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "ppxlib"
  "dune" {>= "3.9"}
  "merlin-lib"
  "cppo"
  "csexp" {with-dev-setup}
  "menhir" {= "20201216" & with-dev-setup}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocaml-mlx/mlx.git"
