opam-version: "2.0"
synopsis: "Merlin support for MLX OCaml dialect"
maintainer: ["Andrey Popp"]
authors: ["Andrey Popp"]
license: "MIT"
homepage: "https://github.com/ocaml-mlx/mlx"
doc: "https://url/to/documentation"
bug-reports: "https://github.com/ocaml-mlx/mlx/issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "ppxlib" {>= "0.32.1"}
  "ocaml-compiler-libs" {>= "v0.12.4"} # b/c of Compiler_pprintast
  "dune" {>= "3.16"}
  "merlin-lib"
  "cppo"
  "csexp" {with-dev-setup}
  "menhir" {= "20201216" & with-dev-setup}
  "ocamlformat" {with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ocaml-mlx/mlx.git"
