(executable
 (name pp)
 (package mlx)
 (public_name mlx-pp)
 (flags
  (:standard -w -9-67))
 (libraries compiler-libs.common))

(ocamllex lexer)

(menhir
 (flags
  --lalr
  --explain
  --dump
  --require-aliases
  --strict
  -lg=1
  -la=1
  --fixed-exception
  --table
  --strategy
  simplified)
 (enabled_if (<> %{profile} "release"))
 (mode promote)
 (modules parser))

(copy_files
 (mode promote)
 (enabled_if (<> %{profile} "release"))
 (files ../ocaml/parsing/parse.{ml,mli}))

(copy_files
 (mode promote)
 (enabled_if (<> %{profile} "release"))
 (files ../ocaml/parsing/lexer.mli))

(copy_files
 (mode promote)
 (enabled_if (<> %{profile} "release"))
 (files ../ocaml/boot/menhir/menhirLib.{ml,mli}))
