(executable
 (name pp)
 (package mlx)
 (public_name mlx-pp)
 (flags
  (:standard -w -9-67 -open Astlib.Ast_501))
 (libraries ppxlib compiler-libs.common))

(ocamllex lexer)

(menhir
 (flags
  --lalr
  --explain
  --dump
  --require-aliases
  --strict
  -lg=1
  -la=1
  --fixed-exception
  --table
  --strategy
  simplified)
 (enabled_if
  (<> %{profile} "release"))
 (mode promote)
 (modules parser))

(copy_files
 (mode promote)
 (enabled_if
  (<> %{profile} "release"))
 (files ../ocaml/parsing/parse.{ml,mli}))

(copy_files
 (mode promote)
 (enabled_if
  (<> %{profile} "release"))
 (files ../ocaml/parsing/lexer.mli))

(copy_files
 (mode promote)
 (enabled_if
  (<> %{profile} "release"))
 (files ../ocaml/parsing/syntaxerr.{ml,mli}))

(copy_files
 (mode promote)
 (enabled_if
  (<> %{profile} "release"))
 (files ../ocaml/parsing/ast_helper.{ml,mli}))

(copy_files
 (mode promote)
 (enabled_if
  (<> %{profile} "release"))
 (files ../ocaml/parsing/docstrings.{ml,mli}))

(copy_files
 (files ../menhirLib/menhirLib.{ml,mli}))
