(executable
 (name ocamlmerlin_mlx)
 (package ocamlmerlin-mlx)
 (public_name ocamlmerlin-mlx)
 (modules ocamlmerlin_mlx)
 (libraries mlx_preprocess mlx_kernel))

(rule
 (targets extend_helper.ml)
 (deps extend_helper.cppo.ml)
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))

(copy_files# ../merlin-extend/*[!extend_helper].{ml,mli})
