(executable
 (name ocamlmerlin_mlx)
 (package ocamlmerlin-mlx)
 (public_name ocamlmerlin-mlx)
 (modules ocamlmerlin_mlx)
 (flags
  :standard
  -open=Mlx_utils
  -open=Mlx_kernel
  -open=Mlx_ocaml_preprocess)
 (libraries
  mlx_ocaml_preprocess
  mlx_kernel
  merlin-lib.extend
  merlin-lib.kernel
  ppxlib))
