(library
 (name mlx_extend)
 (package ocamlmerlin-mlx)
 (modules
  (:standard \ extend_helper))
 (flags
  :standard
  -open=Mlx_ocaml_utils
  -open=Mlx_ocaml_parsing
  -open=Mlx_ocaml_typing)
 (libraries mlx_ocaml_parsing mlx_ocaml_typing unix mlx_ocaml_utils))

(copy_files#
 (enabled_if
  (<> %{profile} "release"))
 (mode promote)
 (files %{project_root}/merlin/src/extend/*.{ml,mli}))
