(library
 (name mlx_kernel)
 (package ocamlmerlin-mlx)
 (flags
  :standard
  -w=-9-67-69
  -open=Mlx_utils
  -open=Mlx_ocaml_utils
  -open=Mlx_ocaml_parsing
  -open=Mlx_ocaml_preprocess
  -open=Mlx_ocaml_typing
  -open=Mlx_extend)
 (libraries
  mlx_utils
  mlx_ocaml_utils
  mlx_ocaml_parsing
  mlx_ocaml_preprocess
  mlx_ocaml_typing
  mlx_extend
  merlin-lib.kernel
  merlin-lib.os_ipc
  merlin-lib.dot_protocol))

(copy_files#
 (enabled_if
  (<> %{profile} "release"))
 (mode promote)
 (files
  %{project_root}/merlin/src/kernel/{msource,mconfig,mreader,mreader_parser,mreader_lexer,mreader_recover,mreader_explain,extension,mreader_extend,mocaml}.{ml,mli}))
